# equestrian_course_designer

./: .gitignore  README.md  requirements.txt
BackEnd/: pyproject.toml  requirements.txt
BackEnd/equestrian/: asgi.py  settings.py  urls.py
BackEnd/equestrian/keys/: alipay_public_key.pem  app_private_key.pem
BackEnd/feedback/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
BackEnd/feedback/migrations/: 0001_initial.py
BackEnd/obstacles/: utils.py  views_example.py
BackEnd/static/css/: Home.css  admin.css  index.css
BackEnd/static/js/: Home.js  custom_obstacle_admin.js  design_admin.js  element-plus.js  index.es.js  index.js  purify.es.js
BackEnd/templates/: payment_success.html
BackEnd/templates/admin/: admin.html
BackEnd/user/: admin.py  consumers.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py
BackEnd/user/migrations/: 0001_initial.py  0002_alter_design_options_alter_design_download_and_more.py  0004_design_description_design_downloads_count_and_more.py  0005_userprofile.py  0006_userprofile_monthly_price_userprofile_yearly_price.py  0007_membershipplan_userprofile_membership_plan.py  0008_remove_userprofile_monthly_price_and_more.py  0009_remove_userprofile_design_storage_limit.py  0010_customobstacle.py  0011_customobstacle_is_shared.py  0012_membershiporder.py  0013_rename_premium_expiry_userprofile_premium_expire_date_and_more.py  0014_design_collaborators_alter_design_author.py  0015_remove_design_collaborators_alter_design_author.py  0016_membershipplan_custom_obstacle_limit.py
FrontEnd/: .gitignore  (+10 more)
(+167 files in other folders)
