[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels==3.0.5",
    "channels-redis==4.1.0",
    "daphne==3.0.2",
    "django==5.1.3",
    "django-cors-headers==4.3.1",
    "django-simpleui==2025.1.13",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.3.1",
    "mysqlclient==2.2.4",
    "pillow==10.2.0",
    "pycryptodome==3.19.1",
    "python-alipay-sdk==3.3.0",
    "python-dotenv==1.0.1",
    "whitenoise>=6.11.0",
]
